--- a/Wireshark/Latex/sources/p1.tex
+++ b/Wireshark/Latex/sources/p1.tex
@@ -19,7 +19,7 @@ Trả lời các câu hỏi sau:\\
 \end{figure}
 
 \textbf{2.	Cho biết port được sử dụng là bao nhiêu? Nếu không có port thì giải thích tại sao?}\\
-Không có port được sử dụng.\\
+Không có source port number và destination port number.\\
 Lý do: Lệnh ping sử dụng giao thức \textbf{ICMP} của mô hình TCP/IP. ICMP là giao thức ở tầng, còn port number được sử dụng ở tầng Application.
 
 \textbf{3.	Với gói tin ICMP request, cho biết kích thước (bytes) của từng phần trong diagram. (Chú ý: Kích thước tổng của gói tin là 98 bytes)}
