part of p2 wireshark

--- a/Wireshark/Latex/sources/p1.tex
+++ b/Wireshark/Latex/sources/p1.tex
@@ -9,8 +9,8 @@ Nội dung tập tin \textbf{\textit{ping.pcapng}} như sau.
 \end{figure}
 Trả lời các câu hỏi sau:\\
 \textbf{1.	Cho biết địa chỉ IP của host ping và host được ping?}\\
-Địa chỉ IP của host ping: 192.168.0.105\\
-Địa chỉ IP của host được ping: 192.168.1.1
+Địa chỉ IP của host ping: \textbf{192.168.0.105.}\\
+Địa chỉ IP của host được ping: \textbf{192.168.1.1.}
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=1]{../figures/p1/p1_r1}
@@ -19,8 +19,8 @@ Trả lời các câu hỏi sau:\\
 \end{figure}
 
 \textbf{2.	Cho biết port được sử dụng là bao nhiêu? Nếu không có port thì giải thích tại sao?}\\
-Không có source port number và destination port number.\\
-Lý do: Lệnh ping sử dụng giao thức \textbf{ICMP} của mô hình TCP/IP. ICMP là giao thức ở tầng, còn port number được sử dụng ở tầng Application.
+\textbf{Không có} source port number và destination port number.\\
+\textbf{Lý do:} Lệnh ping sử dụng giao thức \textbf{ICMP} của mô hình TCP/IP. ICMP là giao thức ở tầng, còn port number được sử dụng ở tầng Application.
 
 \textbf{3.	Với gói tin ICMP request, cho biết kích thước (bytes) của từng phần trong diagram. (Chú ý: Kích thước tổng của gói tin là 98 bytes)}
 
