--- a/Wireshark/Latex/sources/header.tex
+++ b/Wireshark/Latex/sources/header.tex
@@ -17,3 +17,5 @@ MSSV & Họ và tên & Công việc \\
 \end{table}
 
 \section{Mức độ hoàn thành}
+\textbf{Bài 1:} $100\%$ (5/5)\\
+\textbf{Bài 2:} $100\%$ (14/14)
