--- a/Wireshark/Latex/sources/p1.tex
+++ b/Wireshark/Latex/sources/p1.tex
@@ -34,6 +34,7 @@ ICMP data & ICMP header & IP header & Ethernet header \\
 \hline 
 \end{tabular} 
 \end{center}
+\caption{Kích thước gói tin ICMP request}
 \end{table}
 
 \begin{figure}[H]
