part of p3 wireshark

--- a/Wireshark/Latex/sources/main.tex
+++ b/Wireshark/Latex/sources/main.tex
@@ -63,6 +63,7 @@
 leftmargin=-5pt,rightmargin=-5pt,
 innerleftmargin=5pt,innerrightmargin=5pt]{mybox}
 \begin{document}
+%Order of compilation (on TexMaker): F6 (pdfLaTex) -> F11 (BibTex) -> F6 (pdfLaTex) -> F7 (view pdf)
 \fancyhf{}
 \lhead{Báo cáo đồ án môn học Mạng máy tính}
 \chead{}
@@ -83,4 +84,10 @@ innerleftmargin=5pt,innerrightmargin=5pt]{mybox}
 \input{p1}
 \newpage
 \input{p2}
+\newpage
+\input{p3}
+
+\newpage
+\section{Tài liệu tham khảo}
+\printbibliography
 \end{document}
