edit p3 wireshark beginning + edit images in p1 p1 as required

--- a/Wireshark/Latex/sources/main.tex
+++ b/Wireshark/Latex/sources/main.tex
@@ -9,7 +9,7 @@
 \usepackage{amssymb}
 \usepackage{pgf,tikz,pgfplots}
 \usepackage{graphicx}
-\graphicspath{ {figures/} }
+%\graphicspath{ {figures/} }
 \usepackage{array}
 \usepackage{cases}
 \usepackage{listings}
