--- a/Wireshark/Latex/sources/p2.tex
+++ b/Wireshark/Latex/sources/p2.tex
@@ -115,6 +115,13 @@ Kết quả của query này như sau.
 \end{figure}
 
 \textbf{14. Vẽ hình quá trình gửi ACK (gồm Sequence number, Acknowledgement number) từ khi kết nối đến khi kết thúc nhận data giữa client và HTTP server.}\\
+Các gói tin liên quan trong quá trình gửi ACK từ khi kết nối đến khi kết thúc nhận data giữa client và HTTP server như sau.
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=.6]{../figures/p2/p2_packets}
+\end{center}
+\caption{Các gói tin liên quan}
+\end{figure}
 Quá trình gửi ACK từ khi kết nối đến khi kết thúc nhận data giữa client và HTTP server.
 \begin{figure}[H]
 \begin{center}
