--- a/Wireshark/Latex/sources/p3.tex
+++ b/Wireshark/Latex/sources/p3.tex
@@ -8,7 +8,7 @@ Kết quả bắt gói tin chi tiết được lưu trong tập tin \textbf{bai3
 Kết quả bắt gói tin sau khi tracert như sau.
 \begin{figure}[H]
 \begin{center}
-\includegraphics[scale=1]{../figures/p3/p3_res1}
+\includegraphics[scale=.8]{../figures/p3/p3_res1}
 \end{center}
 \caption{Kết quả bắt gói tin sau khi tracert}
 \end{figure}
@@ -22,7 +22,7 @@ Thông tin này được thể hiện qua các gói tin ICMP (gói tin IP có tr
 Địa chỉ IP của máy gửi request là 192.168.1.6.
 \begin{figure}[H]
 \begin{center}
-\includegraphics[scale=1]{../figures/p3/p3_hostip}
+\includegraphics[scale=.8]{../figures/p3/p3_hostip}
 \end{center}
 \caption{Địa chỉ IP của máy gửi request}
 \end{figure}
@@ -33,14 +33,14 @@ Máy tính sẽ gửi gói tin DNS query lên DNS server để “hỏi”, sau 
 \item Gói tin DNS query được gửi từ destination host là gói tin số 68 (được lưu trong file \textbf{bai3.pcapng}).
 \begin{figure}[H]
 \begin{center}
-\includegraphics[scale=1]{../figures/p3/p3_dns1}
+\includegraphics[scale=.8]{../figures/p3/p3_dns1}
 \end{center}
 \caption{Gói tin DNS query}
 \end{figure}
 \item Và gói tin trả lời tương ứng là gói tin số 71 (được lưu trong file \textbf{bai3.pcapng}). Hình vẽ cho thấy có FIT có 3 địa chỉ IP 115.73.213.165, 14.161.23.204, 14.241.254.131. Trong lần này traceroute được thực hiện tới địa chỉ IP 115.73.213.165. 
 \begin{figure}[H]
 \begin{center}
-\includegraphics[scale=1]{../figures/p3/p3_dns2}
+\includegraphics[scale=.8]{../figures/p3/p3_dns2}
 \end{center}
 \caption{Gói tin DNS query response}
 \end{figure}
