--- a/Wireshark/Latex/sources/header.tex
+++ b/Wireshark/Latex/sources/header.tex
@@ -18,4 +18,7 @@ MSSV & Họ và tên & Công việc \\
 
 \section{Mức độ hoàn thành}
 \textbf{Bài 1:} $100\%$ (5/5)\\
-\textbf{Bài 2:} $100\%$ (14/14)
+\textbf{Bài 2:} $100\%$ (14/14)\\
+\textbf{Bài 3:} $100\%$ (5/5)\\
+\textbf{Bài 4:} \\
+\textbf{Bài 5:} $100\%$ (8/8)\\
