--- a/Wireshark/Latex/sources/main.tex
+++ b/Wireshark/Latex/sources/main.tex
@@ -86,6 +86,10 @@ innerleftmargin=5pt,innerrightmargin=5pt]{mybox}
 \input{p2}
 \newpage
 \input{p3}
+\newpage
+\input{p4}
+\newpage
+\input{p5}
 
 \newpage
 \section{Tài liệu tham khảo}
