--- a/Wireshark/Latex/sources/main.tex
+++ b/Wireshark/Latex/sources/main.tex
@@ -90,6 +90,7 @@ innerleftmargin=5pt,innerrightmargin=5pt]{mybox}
 \input{p4}
 \newpage
 \input{p5}
+\nocite{gt}
 
 \newpage
 \section{Tài liệu tham khảo}
