--- a/Wireshark/Latex/sources/refs.bib
+++ b/Wireshark/Latex/sources/refs.bib
@@ -4,7 +4,7 @@ title = {{Slides b{\`{a}}i giảng m{\^{o}}n học Mạng m{\'{a}}y t{\'{i}}nh}}
 }
 
 @book{cn,
-author = {{James F. Kurose}, {Keith W. Ross}},
+author = {Kurose, James F. and Ross, Keith F.},
 edition = {6},
 isbn = {978-0-13-285620-1},
 publisher = {Pearson},
@@ -12,5 +12,15 @@ title = {{Computer Networking: A Top-Down Approach}},
 pages = {354},
 year = {2013}
 }
+
+@book{gt,
+address = {Th{\`{a}}nh phố Hồ Ch{\'{i}} Minh},
+author = {Cường, Mai Văn and Dũng, Trần Trung and Ngọc, Trần Hồng and Sơn, L{\^{e}} Ngọc and Thanh, L{\^{e}} Giang and Trang, Trương Thị Mỹ and Tuấn, Đ{\`{a}}o Anh},
+isbn = {978-604-67-1702-7},
+publisher = {NXB Khoa học v{\`{a}} Kỹ thuật},
+title = {{Gi{\'{a}}o tr{\`{i}}nh Mạng m{\'{a}}y t{\'{i}}nh}},
+year = {2020}
+}
+
 
 
