edit caption fig 31 + compile to pdf

--- a/Wireshark/Latex/sources/p5.tex
+++ b/Wireshark/Latex/sources/p5.tex
@@ -33,7 +33,7 @@ Muốn chuyển sang mode passive client cần gửi gói tin request PASV.
 \begin{center}
 \includegraphics[scale=.8]{../figures/p5/p5_3}
 \end{center}
-\caption{Mode truy xuất của client lên server}
+\caption{Thể hiện của gói tin request/response khi muốn vào mode passive}
 %\label{fig5a1}
 \end{figure}
 
