--- a/Wireshark/Latex/sources/header.tex
+++ b/Wireshark/Latex/sources/header.tex
@@ -20,5 +20,5 @@ MSSV & Họ và tên & Công việc \\
 \textbf{Bài 1:} $100\%$ (5/5)\\
 \textbf{Bài 2:} $100\%$ (14/14)\\
 \textbf{Bài 3:} $100\%$ (5/5)\\
-\textbf{Bài 4:} \\
+\textbf{Bài 4:} $100\%$ (4/4)\\
 \textbf{Bài 5:} $100\%$ (8/8)\\
