--- a/Wireshark/Latex/sources/main.tex
+++ b/Wireshark/Latex/sources/main.tex
@@ -93,6 +93,5 @@ innerleftmargin=5pt,innerrightmargin=5pt]{mybox}
 \nocite{gt}
 
 \newpage
-\section{Tài liệu tham khảo}
-\printbibliography
+\printbibliography[title = Tài liệu tham khảo]
 \end{document}
