--- a/Socket-Place/report/sources/main.tex
+++ b/Socket-Place/report/sources/main.tex
@@ -71,5 +71,6 @@ innerleftmargin=5pt,innerrightmargin=5pt]{mybox}
 \listoftables
 \input{cover}
 \input{header}
-
+\newpage
+\input{protocol}
 \end{document}
