--- a/Socket-Place/report/sources/main.tex
+++ b/Socket-Place/report/sources/main.tex
@@ -72,5 +72,6 @@ innerleftmargin=5pt,innerrightmargin=5pt]{mybox}
 \input{cover}
 \input{header}
 \newpage
+\input{overview-description}
 \input{protocol}
 \end{document}
