--- a/Socket-Place/report/sources/protocol.tex
+++ b/Socket-Place/report/sources/protocol.tex
@@ -115,3 +115,5 @@ Gồm 5 trường theo thứ tự đó với các mô tả chi tiết sau đây:
 \end{enumerate}
 \end{enumerate}
 \end{enumerate}
+\subsection{Cách tổ chức cơ sở dữ liệu:}
+\subsection{Quá trình truyền từ client lên server:}
