--- a/Socket-Place/report/sources/main.tex
+++ b/Socket-Place/report/sources/main.tex
@@ -18,9 +18,6 @@
 \usepackage{float} 
 \usepackage{hyperref}
 \usepackage{multirow}
-\usepackage{booktabs, makecell}
-\usepackage{eurosym}
-\usepackage{siunitx}
 \usepackage{minitoc}
 \pgfplotsset{compat=1.5}
 \usepackage{mathrsfs}
@@ -28,6 +25,29 @@
 \usepackage{fancyhdr}
 \pagestyle{fancy}
 \pagestyle{empty}
+\usepackage[noend]{algpseudocode}
+\usepackage{algorithm,algpseudocode}
+\usepackage{lipsum}
+\makeatletter
+\newenvironment{breakablealgorithm}
+  {% \begin{breakablealgorithm}
+   \begin{center}
+     \refstepcounter{algorithm}% New algorithm
+     \hrule height.8pt depth0pt \kern2pt% \@fs@pre for \@fs@ruled
+     \renewcommand{\caption}[2][\relax]{% Make a new \caption
+       {\raggedright\textbf{\fname@algorithm~\thealgorithm} ##2\par}%
+       \ifx\relax##1\relax % #1 is \relax
+         \addcontentsline{loa}{algorithm}{\protect\numberline{\thealgorithm}##2}%
+       \else % #1 is not \relax
+         \addcontentsline{loa}{algorithm}{\protect\numberline{\thealgorithm}##1}%
+       \fi
+       \kern2pt\hrule\kern2pt
+     }
+  }{% \end{breakablealgorithm}
+     \kern2pt\hrule\relax% \@fs@post for \@fs@ruled
+   \end{center}
+  }
+\makeatother
 \definecolor{dkgreen}{rgb}{0,0.6,0}
 \definecolor{gray}{rgb}{0.5,0.5,0.5}
 \definecolor{mauve}{rgb}{0.58,0,0.82}
@@ -42,7 +62,7 @@
 ]{biblatex}
 \addbibresource{refs.bib}
 \lstset{frame=tb,
-  language=C++,
+  language=Python,
   aboveskip=3mm,
   belowskip=3mm,
   showstringspaces=false,
@@ -76,10 +96,11 @@ innerleftmargin=5pt,innerrightmargin=5pt]{mybox}
 \pagestyle{fancy}
 \renewcommand{\headrulewidth}{0pt}
 \renewcommand{\footrulewidth}{0pt}
+\input{cover}
 \tableofcontents
 \listoffigures
 \listoftables
-\input{cover}
+\newpage
 \input{header}
 \newpage
 \input{overview-description}
