--- a/Socket-Place/report/sources/protocol.tex
+++ b/Socket-Place/report/sources/protocol.tex
@@ -1,10 +1,11 @@
 \section{Kịch bản giao tiếp của chương trình}
-\subsection{Giao thức trao đổi giữa client và server: UDP}
-\subsection{Cấu trúc của thông điệp:}
+\subsection{Giao thức trao đổi giữa client và server}
+Server và client trao đổi với nhau thông qua giao thức UDP.
+\subsection{Cấu trúc của thông điệp}
 
 \large\textbf{Một thông điệp có tổng cộng \texttt{1024 bytes}.} 
 \begin{enumerate}
-\item \textbf{Đối với thông điệp từ server có 2 loại sau đây:}
+\item \textbf{Đối với thông điệp từ server có 2 loại sau đây}
 \normalsize
 \begin{enumerate}
 \item \textit{Thông điệp gửi số lượng thông điệp cần nhận cho data:} \texttt{|padding|len|}
@@ -36,7 +37,7 @@ Gồm 3 trường theo thứ tự đó với các mô tả chi tiết sau đây:
 
 \end{enumerate}
 \large
-\item \textbf{Đối với thông điệp từ client có 6 loại sau đây:}
+\item \textbf{Đối với thông điệp từ client có 6 loại sau đây.}
 \normalsize
 
 \begin{enumerate}
@@ -115,5 +116,56 @@ Gồm 5 trường theo thứ tự đó với các mô tả chi tiết sau đây:
 \end{enumerate}
 \end{enumerate}
 \end{enumerate}
-\subsection{Cách tổ chức cơ sở dữ liệu:}
-\subsection{Quá trình truyền từ client lên server:}
+\subsection{Cách tổ chức cơ sở dữ liệu}
+Dữ liệu được lưu trong tập tin \texttt{db.json} thành các bộ với các trường thông tin sau:
+\begin{itemize}
+\item \texttt{id}: gồm ba ký tự kiểu \texttt{char}, là viết tắt tên địa điểm.
+\item \texttt{name}: tên đầy đủ của địa điểm tương ứng.
+\item \texttt{coordinate}: tọa độ vị trí trung tâm của địa điểm theo thứ tự vĩ độ và kinh độ. Địa điểm có vĩ độ dương nằm ở phía Bắc đường xích đạo, vĩ độ âm nằm ở phía Nam đường xích đạo. Địa điểm có kinh độ dương nằm ở phía Đông kinh tuyến gốc, kinh độ âm nằm ở phía Tây kinh tuyến gốc.
+\item \texttt{description}: đoạn mô tả ngắn về địa điểm tương ứng.
+\item \texttt{avatar}: lưu đường dẫn tương đối (so với tập tin \texttt{db.json}) đến ảnh đại diện của địa điểm.
+\item \texttt{images}: lưu danh sách đường dẫn tương đối (so với tập tin \texttt{db.json}) đến các hình ảnh của địa điểm.
+\end{itemize}
+Thư mục \texttt{images} được chia thành các thư mục con, mỗi thư mục con có tên là các \texttt{id}, trong thư mục tương ứng bao gồm một hình đại diện \texttt{avt.jpg}, và các hình ảnh minh họa khác \texttt{img*.jpg}, trong đó * là số thứ tự của hình ảnh tương ứng.
+Các thông tin được đưa vào cơ sở dữ liệu dưới dạng mã Unicode.
+\begin{figure}[H]
+\center{\includegraphics[scale=0.75]{protocol/db_example}}
+\caption{Ví dụ về cấu trúc lưu trữ dữ liệu}
+\end{figure}
+
+\begin{figure}[H]
+\center{\includegraphics[scale=0.75]{protocol/img_example}}
+\caption{Ví dụ về cấu trúc thư mục con của \texttt{images}}
+\end{figure}
+
+\subsection{Quá trình truyền từ client lên server}
+\begin{enumerate}
+\item Đoạn dữ liệu ban đầu sẽ được xử lý thành danh sách các thông điệp kích thước 1024.
+\item Server gửi số lượng thông điệp cho client và chờ \texttt{ACK}.
+\item Sử dụng thuật toán \texttt{Sliding window} với kích thước 5 để truyền:
+\begin{itemize}
+\item Phía server
+\begin{breakablealgorithm}
+  \caption{Phía server}
+  \begin{algorithmic}[1]
+    \Function{SWServer}{} 
+	\State $tds \gets $ danh sách thông điệp cần truyền
+	\State $l\_tds \gets $ độ dài danh sách
+    \State $size \gets $ kích thước cửa sổ = $5$
+    \State $i \gets 0 $
+    \While{$ i < l\_tds$}
+    	\State $struyen \gets $ số lượng truyền = $\min\left( {size,{\text{ }}l\_tds{\text{ }} - {\text{ }}i} \right)$
+    	\State $kt \gets$ mảng đánh dấu kích thước struyen
+    	\While{$kt$ chưa được đánh dấu hết}
+    		\State truyền lần lượt toàn bộ cửa sổ hiện tại ($i \to i + struyen$)
+    		\State thực hiện nhận ACK $struyen$ lần, đánh dấu $ID$ vào $kt$
+    		\State nếu quá giờ nhận ACK, coi như gói bị mất và truyền lại
+    	\EndWhile
+    	\State $i \gets i + size$ (dịch tới cửa sổ tiếp theo)
+    \EndWhile
+    \EndFunction
+  \end{algorithmic}
+\end{breakablealgorithm}
+
+\end{itemize}
+\end{enumerate}
