--- a/Socket-Place/report/sources/header.tex
+++ b/Socket-Place/report/sources/header.tex
@@ -3,16 +3,16 @@
 \begin{center}
 \begin{tabular}{|c|c|c|}
 \hline 
-MSSV & Họ và tên & Công việc \\ 
+MSSV & Họ và tên & Email \\ 
 \hline 
-20120131 & Nguyễn Văn Lộc & Thiết kế các hàm ở client và GUI \\ 
+20120131 & Nguyễn Văn Lộc & 20120131@student.hcmus.edu.vn \\ 
 \hline 
-20120536 & Võ Trọng Nghĩa & Thiết kế giao thức truyền dữ liệu giữa client và server \\ 
+20120536 & Võ Trọng Nghĩa & 20120536@student.hcmus.edu.vn \\ 
 \hline 
-20120572 & Nguyễn Kiều Minh Tâm & Thiết kế GUI \\ 
+20120572 & Nguyễn Kiều Minh Tâm & 20120572@student.hcmus.edu.vn \\ 
 \hline 
 \end{tabular}
-\caption{Bảng phân công thành viên} 
+\caption{Bảng thông tin thành viên} 
 \end{center}
 \end{table}
 
