--- a/Socket-Place/report/sources/protocol.tex
+++ b/Socket-Place/report/sources/protocol.tex
@@ -155,7 +155,7 @@ Các thông tin được đưa vào cơ sở dữ liệu dưới dạng mã Unic
     \State $i \gets 0 $
     \While{$ i < l\_tds$}
     	\State $struyen \gets $ số lượng truyền = $\min\left( {size,{\text{ }}l\_tds{\text{ }} - {\text{ }}i} \right)$
-    	\State $kt \gets$ mảng đánh dấu kích thước struyen
+    	\State $kt \gets$ mảng đánh dấu kích thước $struyen$
     	\While{$kt$ chưa được đánh dấu hết}
     		\State truyền lần lượt toàn bộ cửa sổ hiện tại ($i \to i + struyen$)
     		\State thực hiện nhận ACK $struyen$ lần, đánh dấu $ID$ vào $kt$
@@ -170,7 +170,7 @@ Các thông tin được đưa vào cơ sở dữ liệu dưới dạng mã Unic
 \begin{breakablealgorithm}
   \caption{Phía client}
   \begin{algorithmic}[1]
-    \Function{SWServer}{} 
+    \Function{SWClient}{} 
 
 	\State $l\_tds \gets $ độ dài danh sách
     \State $size \gets $ kích thước cửa sổ = $5$
@@ -182,7 +182,7 @@ Các thông tin được đưa vào cơ sở dữ liệu dưới dạng mã Unic
     	\While{$buffer$ chưa đầy hết:}
     		\State với mỗi phần tử, thực hiện nhận và kiểm lỗi, sau đó đưa vào $buffer$
     	\EndWhile
-    	\State sắp xếp lại gói tin trong $buffer$, tách phần data và nối vào $result$
+    	\State sắp xếp lại gói tin trong $buffer$, tách phần $data$ và nối vào $result$
 
     	\State $i \gets i + size$ (dịch tới cửa sổ tiếp theo)
     \EndWhile
