--- a/Socket-Place/report/sources/refs.bib
+++ b/Socket-Place/report/sources/refs.bib
@@ -1,27 +1,33 @@
-@incollection{hmm2021,
-address = {Stanford},
-author = {Jurafsky, Daniel and Martin, James H.},
-booktitle = {Speech and Language Processing},
-chapter = {Appendix A},
-edition = {3},
-title = {{Hidden Markov model}},
-url = {https://web.stanford.edu/$\sim$jurafsky/slp3/A.pdf},
-year = {2021}
+@misc{Amos,
+author = {Amos, David},
+title = {{Python GUI Programming With Tkinter}},
+url = {https://realpython.com/python-gui-tkinter/#getting-multiline-user-input-with-text-widgets}
 }
 
-@misc{angrybird,
-author = {Dũng, Nguyễn Tiến},
-title = {{M{\^{o}} h{\`{i}}nh Markov ẩn}},
-url = {https://jurgendn.github.io/mathematics/2020/06/16/Hidden-Markov-Model}
+@misc{DelftStack,
+author = {DelftStack},
+title = {{Pass Arguments to Tkinter Button Command}},
+url = {https://www.delftstack.com/howto/python-tkinter/how-to-pass-arguments-to-tkinter-button-command/}
 }
-
-@misc{g4gem,
-author = {{Geeks for Geeks}},
-title = {{ML | Expectation-Maximization Algorithm}},
-url = {https://www.geeksforgeeks.org/ml-expectation-maximization-algorithm/},
-year = {2019}
+@misc{ActiveState,
+author = {ActiveState},
+title = {{How To Display Data In A Table Using Tkinter}},
+url = {https://www.activestate.com/resources/quick-reads/how-to-display-data-in-a-table-using-tkinter/}
 }
-
-
+@misc{Kumar,
+author = {Kumar, Bijay},
+title = {{Python Tkinter Table Tutorial}},
+url = {https://pythonguides.com/python-tkinter-table-tutorial/}
+}
+@misc{Arts,
+author = {Arts, Coder},
+title = {{How to implement Keyboard and Mouse click event in tkinter}},
+url = {https://www.codersarts.com/post/2019/05/30/how-to-implement-keyboard-and-mouse-click-event-in-tkinter-tkinter-event-handling-event-a}
+}
+@misc{Kumara,
+author = {Kumar, Bijay},
+title = {{Python Tkinter Image + Examples}},
+url = {https://pythonguides.com/python-tkinter-image/}
+}
 
 
