--- a/Socket-Place/report/sources/instructions.tex
+++ b/Socket-Place/report/sources/instructions.tex
@@ -21,7 +21,7 @@
 Sau khi khởi động, client có giao diện như sau:
 \begin{figure}[H]
 \center{\includegraphics[scale=0.6]{instructions/client_first_gui}}
-\caption{Khởi động client}
+\caption{Giao diện khởi động của client}
 \end{figure}
 Giao diện khởi đầu của client là danh sách các địa điểm đang được server quản lý, các thông tin hiển thị bao gồm: ID địa điểm và tên địa điểm.\\
 Trên giao diện khởi đầu, nút \textbf{Xem chi tiết} bên cạnh tên mỗi địa điểm cho phép ta truy vấn thông tin chi tiết về địa điểm đó từ server; nút \textbf{Tải về hình ảnh} bên cạnh mỗi địa điểm cho phép ta tải về các hình ảnh của địa điểm đó từ server, hình ảnh sau khi tải về được lưu trong thư mục \textbf{\textit{Temp}} và được hiển thị lên GUI.\\
