--- a/Packet Tracer/Latex/sources/header.tex
+++ b/Packet Tracer/Latex/sources/header.tex
@@ -19,3 +19,5 @@ MSSV & Họ và tên & Công việc \\
 \section{Mức độ hoàn thành}
 \textbf{Bài 1:} $100\%$ (8/8)\\
 \textbf{Bài 2:} $100\%$ (4/4)\\
+
+\section{Phiên bản Packet Tracer đã sử dụng trong bài làm: Cisco Packet Tracer 8.1.1}
