--- a/Packet Tracer/Latex/sources/p1.tex
+++ b/Packet Tracer/Latex/sources/p1.tex
@@ -48,12 +48,18 @@ PC1 (PC2 trên hình \ref{fig1.1})&-&192.168.2.10&255.255.255.0&192.168.2.1\\
 \bf \item Ghi chú đầy đủ các thông tin interface, địa chỉ đường mạng, địa chỉ IP lên mô hình mạng:
 
 \rm 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.9]{../figures/p1/p1-2}
+\end{center}
+\caption{Mô hình mạng}
+\end{figure}
 
-\bf \item Ghi chú đầy đủ các thông tin interface, địa chỉ đường mạng, địa chỉ IP lên mô hình mạng:
+\bf \item Hãy cho biết các router có được cấu hình gateway hay không? Nếu có hãy viết thông tin gateway của từng router.
 
 \rm
 
-\bf \item Kiểm tra kết nối từ PC0 đến PC1, cho biết kết quả như thế nào? (ở lần ping đầu tiên các gói tin icmp có được gửi thành công hay không). Cho biết đường đi của gói tin icmp (đi qua các thiết bị, IP nào?)
+\bf \item Kiểm tra kết nối từ PC0 đến PC1, cho biết kết quả như thế nào? (ở lần ping đầu tiên các gói tin ICMP có được gửi thành công hay không). Cho biết đường đi của gói tin ICMP (đi qua các thiết bị, IP nào?)
 
 \rm
 
@@ -61,7 +67,7 @@ PC1 (PC2 trên hình \ref{fig1.1})&-&192.168.2.10&255.255.255.0&192.168.2.1\\
 
 \rm
 
-\bf \item Kiểm tra kết nối từ PC0 đến PC2, cho biết kết quả như thế nào? (ở lần ping đầu tiên các gói tin icmp có được gửi thành công hay không). Cho biết đường đi của gói tin icmp (đi qua các thiết bị, IP nào?)
+\bf \item Kiểm tra kết nối từ PC0 đến PC2, cho biết kết quả như thế nào? (ở lần ping đầu tiên các gói tin ICMP có được gửi thành công hay không). Cho biết đường đi của gói tin ICMP (đi qua các thiết bị, IP nào?)
 
 \rm
 
