--- a/Packet Tracer/Latex/sources/p2.tex
+++ b/Packet Tracer/Latex/sources/p2.tex
@@ -126,6 +126,13 @@ Subnet 5: 172.72.128.0/19 dùng cho mạng wi-fi phòng họp, tầng 3.
 
 Tầng 4, \(x\le 10\) servers dùng địa chỉ IP tĩnh, ta lấy tương ứng \(x\) địa chỉ trong subnet 6: 172.72.160.0/19, cụ thể là 172.72.160.1 - 172.72.160.\(x\)
 
+Dịch vụ DHCP: triển khai trên server 172.72.160.1
+
+Dịch vụ DNS: triển khai trên server 172.72.160.2
+
+Dịch vụ WEB: triển khai trên server 172.72.160.3
+
+
 \bf \item Lập bảng mô tả chi tiết thiết bị gồm: khu vực đặt thiết bị, loại thiết bị, tên thiết bị, version/model, chức năng, tên interface/port, IP
 
 \rm
