--- a/Socket-Email/documentation/main.tex
+++ b/Socket-Email/documentation/main.tex
@@ -30,7 +30,7 @@
 \definecolor{gray}{rgb}{0.5,0.5,0.5}
 \definecolor{mauve}{rgb}{0.58,0,0.82}
 \lstset{frame=tb,
-  language=C++,
+  language=Python,
   aboveskip=3mm,
   belowskip=3mm,
   showstringspaces=false,
@@ -81,4 +81,5 @@ innerleftmargin=5pt,innerrightmargin=5pt]{mybox}
 
 \input{latex/introduction}
 \input{latex/syntax}
+\input{latex/documentation}
 \end{document}
